Your update message here

--- a/public/test.html
+++ b/public/test.html
@@ -196,6 +196,11 @@
 
   </header>
 
+<!-- Hero Section -->
+<section class="relative w-full overflow-hidden">
+  <img src="images/hero-exit.jpg" alt="Exit your timeshare roday!"
+       class="w-full h-auto object-cover object-center" loading="eager" fetchpriority="high" />
+</section>
 
 <!-- Claim Calculator -->
 <section id="calculator" class="py-16 bg-white">
