Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -523,40 +523,52 @@
     </div>
   </div>  
 
-<!-- TRUST ELEMENTS SECTION -->
+<!-- Trust Elements Section -->
 <section class="bg-white py-12">
-    <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 md:grid-cols-4 gap-8 text-center">
+    <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
   
       <!-- Verified Badge -->
       <div class="flex flex-col items-center" data-aos="fade-up">
-        <img src="/images/verified-quaerens-badge.png" alt="Verified by Quaerens Ltd" class="w-[150px] h-auto mb-4">
-        <p class="text-sm text-gray-600">✅ Verified by Quaerens Ltd</p>
+        <img src="images/verified-quaerens-badge.png" alt="Verified by Quaerens Ltd" class="w-[120px] mb-4">
+        <p class="text-sm text-gray-700 font-medium">
+          ✅ Verified by Quaerens Ltd — Registered UK Consumer Claims Agent
+        </p>
       </div>
   
       <!-- Refund Guarantee -->
       <div class="flex flex-col items-center" data-aos="fade-up" data-aos-delay="100">
-        <img src="/images/shield-refund.png" alt="Refund Guarantee" class="w-[100px] h-auto mb-4">
-        <p class="text-sm text-gray-600">🛡️ Full refund if the Do It Yourself Kit is not effective — no questions asked.</p>
+        <img src="images/shield-refund.png" alt="Refund Guarantee" class="w-[100px] mb-4">
+        <p class="text-sm text-gray-700 font-medium">
+          🛡️ Full refund if the Do It Yourself Kit is not effective — no questions asked.
+        </p>
       </div>
   
-      <!-- Email Contact -->
-      <div class="flex flex-col items-center" data-aos="fade-up" data-aos-delay="200">
+      <!-- Contact Options -->
+      <div class="flex flex-col items-center space-y-2" data-aos="fade-up" data-aos-delay="200">
         <a href="mailto:info@quaerens.co.uk">
-          <img src="/images/contact-email-badge.png" alt="Email Support" class="w-[140px] h-auto mb-2">
+          <img src="images/contact-email.png" alt="Email support" class="w-[140px] hover:opacity-90 transition" />
         </a>
-        <p class="text-sm text-gray-600">Email us any time</p>
-      </div>
-  
-      <!-- WhatsApp Contact -->
-      <div class="flex flex-col items-center" data-aos="fade-up" data-aos-delay="300">
         <a href="https://wa.me/447578600296" target="_blank">
-          <img src="/images/contact-whatsapp-badge.png" alt="WhatsApp Support" class="w-[140px] h-auto mb-2">
+          <img src="images/contact-whatsapp.png" alt="WhatsApp support" class="w-[140px] hover:opacity-90 transition" />
         </a>
-        <p class="text-sm text-gray-600">Chat with us on WhatsApp</p>
+        <p class="text-sm text-gray-700 font-medium">Email or WhatsApp us any time</p>
       </div>
   
     </div>
-  </section>  
+  </section> 
+
+  <!-- Verified Reviews Badge -->
+<section class="bg-blue-50 py-8">
+    <div class="max-w-6xl mx-auto px-4 text-center" data-aos="fade-up">
+      <div class="inline-block bg-white border border-gray-200 rounded-xl px-6 py-4 shadow-md">
+        <p class="text-lg font-semibold text-gray-800">
+          <span class="text-green-600">★</span> <span class="text-green-600">★</span> <span class="text-green-600">★</span> <span class="text-green-600">★</span> <span class="text-green-600">★</span>
+          <span class="ml-2 text-sm text-gray-600">Verified Independently – 4.8 Rating</span>
+        </p>
+        <p class="text-sm text-gray-500 mt-1">Real reviews from happy timeshare exit clients</p>
+      </div>
+    </div>
+  </section>
 
 <!-- Testimonials -->
 <section class="relative py-20 bg-gradient-to-br from-yellow-50 via-white to-blue-50">
