Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -546,10 +546,10 @@
       <!-- Contact Options -->
       <div class="flex flex-col items-center space-y-2" data-aos="fade-up" data-aos-delay="200">
         <a href="mailto:info@quaerens.co.uk">
-          <img src="images/contact-email.png" alt="Email support" class="w-[140px] hover:opacity-90 transition" />
+          <img src="images/contact-email-badge.png" alt="Email support" class="w-[140px] hover:opacity-90 transition" />
         </a>
         <a href="https://wa.me/447578600296" target="_blank">
-          <img src="images/contact-whatsapp.png" alt="WhatsApp support" class="w-[140px] hover:opacity-90 transition" />
+          <img src="images/contact-whatsapp-badge.png" alt="WhatsApp support" class="w-[140px] hover:opacity-90 transition" />
         </a>
         <p class="text-sm text-gray-700 font-medium">Email or WhatsApp us any time</p>
       </div>
