--- a/public/test2.html
+++ b/public/test2.html
@@ -331,11 +331,11 @@
       </div>
     </div>
 
-<!-- Spacer to separate sections -->
-<div class="w-full h-10"></div>
+<!-- Spacer -->
+<div class="clear-both w-full h-12 md:h-16"></div>
 
 <!-- How It Works Section -->
-<section id="how-it-works" class="py-16 bg-gradient-to-b from-blue-50 to-white w-full">
+<section id="how-it-works" class="py-16 bg-gradient-to-b from-blue-50 to-white w-full clear-both">
   <div class="max-w-6xl mx-auto px-4">
     <h2 class="text-3xl font-extrabold text-center text-blue-800 mb-12">How It Works</h2>
     <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center">
@@ -344,33 +344,95 @@
       <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-blue-300 hover:shadow-xl transition-all duration-300">
         <div class="text-5xl font-extrabold text-blue-700 mb-4">1</div>
         <h3 class="font-bold text-lg mb-2 text-gray-800">Check Resort Policy</h3>
-        <p class="text-base text-gray-600">Some resorts offer free exits if your loan is paid and fees are current. Always check first.</p>
+        <p class="text-sm text-gray-600">Some resorts offer free exits if your loan is paid and fees are current. Always check first.</p>
       </div>
 
       <!-- Step 2 -->
       <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-yellow-400 hover:shadow-xl transition-all duration-300">
         <div class="text-5xl font-extrabold text-yellow-500 mb-4">2</div>
         <h3 class="font-bold text-lg mb-2 text-gray-800">Buy the DIY Kit</h3>
-        <p class="text-base text-gray-600">Instant access for just €169 — includes legal letters and step-by-step guidance.</p>
+        <p class="text-sm text-gray-600">Instant access for just €169 — includes legal letters and step-by-step guidance.</p>
       </div>
 
       <!-- Step 3 -->
       <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-green-400 hover:shadow-xl transition-all duration-300">
         <div class="text-5xl font-extrabold text-green-500 mb-4">3</div>
         <h3 class="font-bold text-lg mb-2 text-gray-800">Send Your Letter</h3>
-        <p class="text-base text-gray-600">Use our pre-written legal template to cancel your timeshare with confidence.</p>
+        <p class="text-sm text-gray-600">Use our pre-written legal template to cancel your timeshare with confidence.</p>
       </div>
 
       <!-- Step 4 -->
       <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-purple-400 hover:shadow-xl transition-all duration-300">
         <div class="text-5xl font-extrabold text-purple-500 mb-4">4</div>
         <h3 class="font-bold text-lg mb-2 text-gray-800">Exit Complete</h3>
-        <p class="text-base text-gray-600">Most clients receive written confirmation within a few weeks — stress-free and final.</p>
+        <p class="text-sm text-gray-600">Most clients receive written confirmation within a few weeks — stress-free and final.</p>
       </div>
 
     </div>
   </div>
 </section>
+
+<!-- What You Get Section -->
+<section class="py-16 bg-white">
+    <div class="max-w-6xl mx-auto px-4">
+      <h2 class="text-3xl font-extrabold text-center text-blue-800 mb-12">
+        💼 What’s Included in Your Do It Youreself Exit Kit
+      </h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 text-center">
+  
+        <!-- Item 1 -->
+        <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-lg transition">
+          <div class="text-4xl mb-3">📄</div>
+          <h3 class="font-bold mb-2 text-gray-800">Legal Letters</h3>
+          <p class="text-sm text-gray-600">Professionally drafted cancellation letters ready to send.</p>
+        </div>
+  
+        <!-- Item 2 -->
+        <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-lg transition">
+          <div class="text-4xl mb-3">🧭</div>
+          <h3 class="font-bold mb-2 text-gray-800">Step-by-Step Guide</h3>
+          <p class="text-sm text-gray-600">Clear instructions on what to send, when, and where.</p>
+        </div>
+  
+        <!-- Item 3 -->
+        <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-lg transition">
+          <div class="text-4xl mb-3">📬</div>
+          <h3 class="font-bold mb-2 text-gray-800">Cover Templates</h3>
+          <p class="text-sm text-gray-600">Optional cover notes to make your exit request crystal clear.</p>
+        </div>
+  
+        <!-- Item 4 -->
+        <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-lg transition">
+          <div class="text-4xl mb-3">✍️</div>
+          <h3 class="font-bold mb-2 text-gray-800">Editable Documents</h3>
+          <p class="text-sm text-gray-600">Word and PDF formats — just fill in and send.</p>
+        </div>
+  
+        <!-- Item 5 -->
+        <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-lg transition">
+          <div class="text-4xl mb-3">📞</div>
+          <h3 class="font-bold mb-2 text-gray-800">Support Access</h3>
+          <p class="text-sm text-gray-600">Email or WhatsApp us if you need help at any step.</p>
+        </div>
+  
+        <!-- Item 6 -->
+        <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-lg transition">
+          <div class="text-4xl mb-3">✅</div>
+          <h3 class="font-bold mb-2 text-gray-800">Exit Checklist</h3>
+          <p class="text-sm text-gray-600">Quick checklist to make sure every step is done right.</p>
+        </div>
+
+    </div>
+
+    <!-- CTA Button -->
+    <div class="mt-12 text-center">
+      <a href="/download-kit.html"
+         class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
+        Buy Your Exit Kit Now — Only €169
+      </a>
+    </div>
+  </div>
+</section> 
 
       <!-- Hero Banner Section with Happy Travelers -->
       <section class="w-full mt-8">
