--- a/public/test2.html
+++ b/public/test2.html
@@ -372,6 +372,40 @@
   </div>
 </section>
 
+<!-- FAQ Section -->
+<section class="bg-white py-16">
+    <div class="max-w-4xl mx-auto px-4">
+      <h2 class="text-3xl font-extrabold text-center text-blue-800 mb-10">Frequently Asked Questions</h2>
+      <div class="space-y-6">
+  
+        <!-- Existing Question -->
+        <div class="bg-blue-50 border-l-4 border-blue-500 p-5 rounded shadow">
+          <h3 class="font-bold text-lg text-blue-700 mb-2">What’s in your Do It Yourself Kit?</h3>
+          <p class="text-gray-700 text-sm">
+            You’ll receive legal letter templates tailored for resorts, step-by-step instructions, guidance on sending your cancellation, and backup support if your resort pushes back.
+          </p>
+        </div>
+  
+        <!-- New Question 1 -->
+        <div class="bg-blue-50 border-l-4 border-blue-500 p-5 rounded shadow">
+          <h3 class="font-bold text-lg text-blue-700 mb-2">My resort does not appear in your list. Can you help us?</h3>
+          <p class="text-gray-700 text-sm">
+            Yes. Please send your resort details by email or WhatsApp and we’ll investigate your case free of charge to see if you’re eligible or if we can add your resort to our list.
+          </p>
+        </div>
+  
+        <!-- New Question 2 -->
+        <div class="bg-blue-50 border-l-4 border-blue-500 p-5 rounded shadow">
+          <h3 class="font-bold text-lg text-blue-700 mb-2">We own timeshare in the United States. Can you help us?</h3>
+          <p class="text-gray-700 text-sm">
+            In many cases, yes. US timeshare law varies by state, but if our DIY kit is not applicable to your resort, our legal team may still be able to assist through alternative options.
+          </p>
+        </div>
+  
+      </div>
+    </div>
+  </section>  
+
 <!-- What You Get Section -->
 <section class="py-16 bg-white">
     <div class="max-w-6xl mx-auto px-4">
@@ -830,6 +864,8 @@
       }
     });
 </script>
-  
+
+  <!-- Alpine.js (for dropdowns, collapsibles, etc.) -->
+  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>  
 </body>
 </html>
